Fixed some layout issues in login modal

--- a/frontend/.tmp/styles/login-register.css
+++ b/frontend/.tmp/styles/login-register.css
@@ -17,6 +17,7 @@
   width: 90%;
   display: block;
   margin-bottom: 10px;
+  margin-left: 20px;
   position: relative;
 }
 
@@ -24,6 +25,7 @@
   height: 44px;
   font-size: 16px;
   width: 90%;
+  margin-left: 20px;
   margin-bottom: 10px;
   -webkit-appearance: none;
   background: #fff;
@@ -87,6 +89,7 @@
 
 .login-help{
   font-size: 14px;
+  text-align: center;
 }
 
 .modal-dialog {
@@ -106,7 +109,7 @@
 }
 
 .register-input > span {
-  font-size: 18px;
+  font-size: 15px;
 }
 
 .input-correct {
